<resources>
    <string name="app_name" translatable="false">Jabwave</string>

    <!-- About Application Activity !-->
    <string name="about_app_version">Version %1$s\nCommit %2$s</string>
    <string name="source_code">Source code</string>
    <string name="about_app_license"><![CDATA[
        This program is free software: you may redistribute and/or modify it under the terms
        <a href="file:///android_res/raw/agpl_3.html">GNU Affero General Public License v3.0</a>
        or later version published by the Free Software Foundation.
        <br><br>WITHOUT ANY WARRANTY, NOT EVEN FOR MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE.
    ]]></string>

    <!-- Notifications !-->
    <string name="mds_subtitle">Service receives messages in background</string>

    <!-- Authorization Activity !-->
    <string name="auth_phone_number">Phone Number</string>
    <string name="auth_jid" translatable="false">Jabber ID</string>
    <string name="auth_password">Password</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_register">Register</string>
    <string name="invalid_pn_or_passw">Invalid phone number and/or password</string>
    <string name="invalid_jid_or_passw">Invalid Jabber ID and/or password.</string>
    <string name="auth_error_network">No Internet connection</string>
    <string name="auth_wait">Wait</string>
    <string name="retry_btn">Retry</string>

    <!-- Application Activity !-->
    <string name="general_category">General</string>
    <string name="channels_category">Channels</string>
    <string name="groupchats_category">Group Chats</string>
    <string name="people_category">People</string>
    <string name="global_search_hint">Global Search</string>
    <string name="saved_messages">Saved Messages</string>

    <!-- Menu !-->
    <string name="new_group">New Group</string>
    <string name="general_menu_category">General</string>
    <string name="all_chats">Chats</string>
    <string name="services">Navigator</string>
    <string name="settings">Settings</string>
    <string name="about_app">About</string>

    <!-- Messenger Activity !-->
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="broadcast">Broadcast</string>
    <string name="no_messages">No messages</string>

    <!-- Alert Dialogs !-->
    <string name="open_link_title">Open link?</string>
    <string name="open_link_summary">
        Are you sure you want to open the link located in %s? It may turn out to be unsafe.
    </string>
    <string name="change_account_data_title">Change account data</string>
    <string name="old_phone_number">Old phone number</string>
    <string name="new_phone_number">New phone number</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password (again)</string>
    <string name="reset_password_wait">
        You can change your password no earlier than %s. If you\'re ready, click OK.
    </string>
    <string name="reset_password_do_not_match">Both passwords do not match.</string>

    <string name="reset_password_wait_2">
        Retry no earlier than %s.
    </string>

    <!-- Main settings screen !-->
    <string name="general_settings_category">General</string>
    <string name="account">Account</string>
    <string name="appearance">Appearance</string>
    <string name="security">Security</string>
    <string name="storage">Storage</string>
    <string name="notifications">Notifications</string>
    <string name="network_settings_category">Network</string>
    <string name="traffic_savings">Traffic Savings</string>
    <string name="protocol">Protocol</string>
    <string name="proxy">Proxy</string>
    <string name="development_category">Development</string>
    <string name="debug">Debug</string>
    <string name="experiments">Experiments</string>

    <!-- Main Settings menu !-->
    <string name="edit_profile">Edit Profile</string>

    <!-- Account Settings screen !-->
    <string name="about_account">About account</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>

    <!-- Account Settings screen !-->
    <string name="fl_name">First and last name</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="change_password_summary">Click to change</string>
    <string name="registration_date">Registration date</string>

    <!-- Appearance Settings screen !-->
    <string name="theme_presets">Presets</string>
    <string name="theme_personalization">Personalization</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_summary">Makes use more comfortable in a dark room and saves battery power</string>
    <string name="accent_color">Accent color</string>

    <!-- Notification Channels !-->
    <string name="service_notifications">Service Notifications</string>
    <string name="dm_notifications">Direct Messages</string>
    <string name="muc_notifications">Superchats</string>

    <!-- Errors -->
    <string name="account_access_limited">Access to account is limited</string>
    <string name="account_access_limited_reason">Reason: %s</string>
    <string name="not_supported">Not supported</string>
    <string name="not_supported_by_network">Not supported by current network type</string>
    <string name="not_supported_by_protocol">Not supported by current protocol</string>
    <string name="error">Error</string>

    <!-- Misc !-->
    <string name="_default">Default</string>
    <string name="unknown">Unknown</string>
    <string name="done">Done</string>
    <string name="theme_presets_warning">* Applicable only in the chat window.</string>
</resources>