<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="fl_name"
        android:title="@string/fl_name"
        app:enableCopying="true"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="username"
        android:title="@string/username"
        app:enableCopying="true"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="phone_number"
        android:title="@string/auth_phone_number"
        app:enableCopying="true"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="email"
        android:title="@string/email"
        app:enableCopying="true"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="password"
        android:title="@string/password"
        android:summary="@string/change_password_summary"
        app:iconSpaceReserved="false" />

</PreferenceScreen>