<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">
    <PreferenceCategory
        android:title="@string/general_category"
        android:layout="@layout/layout_preference_category"
        app:iconSpaceReserved="false">
        <Preference
            android:key="account"
            android:title="@string/account"
            android:icon="@drawable/ic_account"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true"
            />

        <Preference
            android:key="appearance"
            android:title="@string/appearance"
            android:icon="@drawable/ic_color_lens"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true" />

        <Preference
            android:icon="@drawable/ic_security"
            android:key="security"
            android:title="@string/security"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true" />

        <Preference
            android:icon="@drawable/ic_storage"
            android:key="storage"
            android:title="@string/storage"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true" />

        <Preference
            android:icon="@drawable/ic_notifications"
            android:key="notifications"
            android:title="@string/notifications"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/network_settings_category"
        android:layout="@layout/layout_preference_category"
        app:iconSpaceReserved="false">

        <Preference
            android:icon="@drawable/ic_traffic"
            android:key="traffic_savings"
            android:title="@string/traffic_savings"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true" />

        <Preference
            android:icon="@drawable/ic_protocol"
            android:key="protocol"
            android:title="@string/protocol"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true" />

        <Preference
            android:icon="@drawable/ic_call_merge"
            android:key="proxy"
            android:title="@string/proxy"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true" />

    </PreferenceCategory>
</PreferenceScreen>