<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:iconSpaceReserved="false">
    <PreferenceCategory
        android:key="theme_presets"
        android:title="@string/theme_presets"
        android:layout="@layout/layout_preference_category"
        app:iconSpaceReserved="false">
        <ListPreference
            android:key="theme_presets_list"
            android:layout="@layout/layout_preference_theme_presets"
            android:minHeight="48dp"
            android:title="@string/theme_presets"
            tools:ignore="TouchTargetSizeCheck" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="personalization"
        android:title="@string/theme_personalization"
        android:layout="@layout/layout_preference_category"
        app:iconSpaceReserved="false">
        <Preference
            android:key="accent_color"
            android:title="@string/accent_color"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:key="appearance_dark_theme"
            android:summary="@string/dark_theme_summary"
            android:title="@string/dark_theme"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>